[gd_scene load_steps=4 format=3 uid="uid://pto2ri6u2v72"]

[ext_resource type="Script" uid="uid://b4unolxxr6tus" path="res://scripts/ui/settings_menu_screen.gd" id="1_dnki8"]
[ext_resource type="Texture2D" uid="uid://bl75vhg63jvvk" path="res://assets/ui/menus/background.png" id="2_q5s4i"]
[ext_resource type="Theme" uid="uid://itqe3g85qeh" path="res://assets/ui/themes/buttons.tres" id="3_q5s4i"]

[node name="SettingsMenuScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_dnki8")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.439234, 0.277393, 0.746892, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_q5s4i")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="WindowModeOptions" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("3_q5s4i")

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("3_q5s4i")
text = "MAIN MENU"

[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowModeOptions" to="." method="_on_window_mode_options_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
